[gd_scene load_steps=2 format=3 uid="uid://b1na482f6cji2"]

[ext_resource type="Script" uid="uid://o2lp24fm7tid" path="res://Assets/Scripts/PauseMenu.gd" id="1_60vf1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.3273
offset_bottom = 639.9829
scale = Vector2(1.0005839, 1.0078394)
script = ExtResource("1_60vf1")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.16364
offset_top = 319.99146
offset_right = -576.16364
offset_bottom = -319.99146
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.825
anchor_bottom = 16.25
offset_right = -32060.51
offset_bottom = -9757.755

[node name="Button_Resume" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Button_Restart" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="Button_Home" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Home
"

[node name="Button_Quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Quit
"
